add: define data models, add configuration and rename dbcontext

--- a/MusicPlatform/appsettings.json
+++ b/MusicPlatform/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MusicPlatform;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost, 1433;Database=MusicPlatform2025;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
