--- a/MusicPlatform.Services.Core/MusicPlatform.Services.Core.csproj
+++ b/MusicPlatform.Services.Core/MusicPlatform.Services.Core.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\MusicPlatform.Web.ViewModels\MusicPlatform.Web.ViewModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
+
 </Project>
