--- a/MusicPlatform/MusicPlatform.Web.csproj
+++ b/MusicPlatform/MusicPlatform.Web.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\MusicPlatform.Web.ViewModels\MusicPlatform.Web.ViewModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\music\" />
+  </ItemGroup>
+
 </Project>
