--- a/MusicPlatform/appsettings.json
+++ b/MusicPlatform/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost, 1433;Database=MusicPlatform2025;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=True;"
   },
+  "CloudinarySettings": {
+    "CloudName": "your-cloudname",
+    "ApiKey": "your-api-key",
+    "ApiSecret": "your-api-secret"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
