--- a/MusicPlatform/MusicPlatform.Web.csproj
+++ b/MusicPlatform/MusicPlatform.Web.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\music\**" />
+    <Content Remove="wwwroot\music\**" />
+    <EmbeddedResource Remove="wwwroot\music\**" />
+    <None Remove="wwwroot\music\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.16" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.16" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.16" />
@@ -23,10 +30,6 @@
     <ProjectReference Include="..\MusicPlatform.Services.Core\MusicPlatform.Services.Core.csproj" />
     <ProjectReference Include="..\MusicPlatform.Web.Infrastructure\MusicPlatform.Web.Infrastructure.csproj" />
     <ProjectReference Include="..\MusicPlatform.Web.ViewModels\MusicPlatform.Web.ViewModels.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot\music\" />
   </ItemGroup>
 
 </Project>
