add: Admin role and seeding

--- a/MusicPlatform/appsettings.Development.json
+++ b/MusicPlatform/appsettings.Development.json
@@ -4,5 +4,30 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "IdentityConfig": {
+    "SignIn": {
+      "RequireConfirmedEmail": false,
+      "RequireConfirmedAccount": false,
+      "RequireConfirmedPhoneNumber": false
+    },
+    "Password": {
+      "RequiredLength": 3,
+      "RequireNonAlphanumeric": false,
+      "RequireDigit": false,
+      "RequireLowercase": false,
+      "RequireUppercase": false,
+      "RequiredUniqueChars": 0
+    }
+  },
+  "UserSeed": {
+    "TestUser": {
+      "Email": "user@music.com",
+      "Password": "123"
+    },
+    "TestAdmin": {
+      "Email": "admin@music.com",
+      "Password": "123"
+    }
   }
 }
