--- a/MusicPlatform.Web.Infrastructure/MusicPlatform.Web.Infrastructure.csproj
+++ b/MusicPlatform.Web.Infrastructure/MusicPlatform.Web.Infrastructure.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MusicPlatform.Data\MusicPlatform.Data.csproj" />
     <ProjectReference Include="..\MusicPlatform.GCommon\MusicPlatform.GCommon.csproj" />
   </ItemGroup>
 
