--- a/MusicPlatform/appsettings.json
+++ b/MusicPlatform/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost, 1433;Database=MusicPlatform2025;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost, 1433;Database=MusicPlatform2025;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    "MusicPlatformDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=MusicPlatform.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "CloudinarySettings": {
     "CloudName": "your-cloudname",
