--- a/MusicPlatform.Web.Tests/MusicPlatform.Web.Tests.csproj
+++ b/MusicPlatform.Web.Tests/MusicPlatform.Web.Tests.csproj
@@ -11,13 +11,18 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.18" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="NUnit" Version="3.14.0" />
     <PackageReference Include="NUnit.Analyzers" Version="3.9.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MusicPlatform.GCommon\MusicPlatform.GCommon.csproj" />
+    <ProjectReference Include="..\MusicPlatform.Web.Infrastructure\MusicPlatform.Web.Infrastructure.csproj" />
+    <ProjectReference Include="..\MusicPlatform.Web.ViewModels\MusicPlatform.Web.ViewModels.csproj" />
     <ProjectReference Include="..\MusicPlatform\MusicPlatform.Web.csproj" />
   </ItemGroup>
 
